--- a/PI-Countries-main/client/src/Components/Card/Card.css
+++ b/PI-Countries-main/client/src/Components/Card/Card.css
@@ -1,15 +1,36 @@
-.CountryCard {
-	width: 140px;
-	margin: auto;
-	text-align: center;
-	line-height: 15px;
-}
-.TextCard {
-	font-size: 1rem;
-	font-weight: bold;
+.Card {
+	margin-top: 20px;
+	margin-bottom: 15px;
+	width: 350px;
+	height: 250px;
+	background: rgba(96, 242, 198, 0.61);
+	box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.5);
+	transition: 100ms;
+	position: relative;
+	bottom: 0px;
+	transition: transform 200ms ease;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	justify-content: space-evenly;
+	align-items: center;
 }
 
-.CardImg {
-	width: 140px;
-	border-radius: 3px;
+.Card:hover {
+	transform: scale(1.02);
+	box-shadow: 0px 15px 5px 0px rgba(0, 0, 0, 0.3);
+	bottom: 10px;
+}
+
+.Img {
+	width: 320px;
+	height: 160px;
+	border-radius: 15px;
+	text-decoration: solid;
+}
+
+.TextCard {
+	text-align: center;
+	color: black;
+	margin-bottom: 5px;
 }
