--- a/PI-Countries-main/client/src/Components/Pagination/Pagination.css
+++ b/PI-Countries-main/client/src/Components/Pagination/Pagination.css
@@ -10,3 +10,9 @@ li {
 	gap: 11px 14px;
 	cursor: pointer;
 }
+
+.Pages li:hover {
+	color: rgb(214, 56, 56);
+	transition: 2s;
+	font-size: 1rem;
+}
