--- a/PI-Countries-main/client/src/Components/CreateActivities/CreateActivities.css
+++ b/PI-Countries-main/client/src/Components/CreateActivities/CreateActivities.css
@@ -1,7 +1,81 @@
-.CreateActivities {
+.outerBox {
+	height: 70vh;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
+	margin-bottom: 20px;
+}
+.bigBox {
+	padding: 40px;
+	background: var(--light-orange);
+	border-radius: 30px;
+	box-shadow: 0px 15px 20px 0px rgb(0 0 0 / 75%);
+	animation-name: apareceSinSombra;
+	animation-duration: 1s;
+	display: block;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	gap: 40px;
+	align-items: center;
+	text-align: left;
+	font-size: 20px;
+}
+.formBox {
 	display: flex;
 	flex-direction: column;
-	width: 200px;
-	flex-wrap: wrap;
-	font-size: 30px;
+	justify-content: left;
+}
+
+.formBox h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: "DynaPuff", cursive;
+}
+.formBox h1 {
+	text-align: center;
+}
+.form-section {
+	gap: 10px;
+	display: flex;
+	align-items: center;
+	padding: 5px;
+}
+.form-input-text {
+	width: 150px;
+}
+.form-input-number {
+	width: 150px;
+	text-align: center;
+}
+.small {
+	width: 75px;
+}
+.large {
+	width: 100%;
+}
+
+.error {
+	margin-top: 20px;
+	color: red;
+	font-weight: bold;
+}
+
+.temperament-div {
+	padding: 3px;
+	background: var(--main-orange);
+	cursor: pointer;
+	user-select: none;
+	transition: background 300ms;
+	border-radius: 3px;
+	border: 2px solid black;
+}
+
+.temperament-div:hover {
+	background: var(--strong-orange);
 }
