--- a/PI-Countries-main/client/src/Components/Pagination/Pagination.css
+++ b/PI-Countries-main/client/src/Components/Pagination/Pagination.css
@@ -1,18 +1,24 @@
 li {
-	list-style: none;
+	text-align: center;
+	width: 30px;
+	height: 25px;
+	border: 1px solid rgb(204, 122, 122);
+	border-radius: 10px;
+	position: relative;
+	transition: transform 50000ms ease;
 }
 
 .Pages {
 	display: flex;
-	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
-	gap: 11px 14px;
+	gap: 5px 5px;
 	cursor: pointer;
 }
 
-.Pages li:hover {
-	color: rgb(214, 56, 56);
-	transition: 2s;
-	font-size: 1rem;
+.li:hover {
+	transform: scale(1);
+	background-color: rgb(48, 209, 20);
+	box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+	bottom: 2px;
 }
