--- a/PI-Countries-main/client/src/Components/CreateActivities/CreateActivities.css
+++ b/PI-Countries-main/client/src/Components/CreateActivities/CreateActivities.css
@@ -1,27 +1,43 @@
 .outerBox {
-	height: 70vh;
-
+	height: 50vh;
 	display: flex;
-	align-items: center;
-	justify-content: center;
+	align-items: flex-start;
+	justify-content: space-around;
 	flex-direction: row;
-	margin-bottom: 20px;
+	margin-bottom: 50px;
+	gap: 40px;
 }
 .bigBox {
 	padding: 40px;
-	background: var(--light-orange);
 	border-radius: 30px;
+
 	box-shadow: 0px 15px 20px 0px rgb(0 0 0 / 75%);
-	animation-name: apareceSinSombra;
-	animation-duration: 1s;
 	display: block;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-between;
 	gap: 40px;
 	align-items: center;
 	text-align: left;
-	font-size: 20px;
+	font-size: 22px;
+	position: relative;
+	margin-block: 40px;
+}
+.listBox {
+	width: 400px;
+	display: flex;
+	gap: 40px;
+	align-items: center;
+	flex-direction: column;
+	font-size: 22px;
+	position: relative;
+	margin-block: 40px;
+}
+.list {
+	font-size: 18px;
+	width: 300px;
+	height: 40px;
+	margin-block: 5px;
 }
 .formBox {
 	display: flex;
@@ -61,21 +77,8 @@ h6 {
 }
 
 .error {
-	margin-top: 20px;
+	margin-block: 15px;
+	margin-left: 180px;
 	color: red;
 	font-weight: bold;
-}
-
-.temperament-div {
-	padding: 3px;
-	background: var(--main-orange);
-	cursor: pointer;
-	user-select: none;
-	transition: background 300ms;
-	border-radius: 3px;
-	border: 2px solid black;
-}
-
-.temperament-div:hover {
-	background: var(--strong-orange);
 }
