--- a/PI-Countries-main/client/src/Components/Card/Card.css
+++ b/PI-Countries-main/client/src/Components/Card/Card.css
@@ -1,9 +1,10 @@
 .Card {
+	border: 1px solid rgb(189, 162, 228);
 	margin-top: 10px;
 	margin-bottom: 10px;
 	width: 350px;
 	height: 250px;
-	background: rgba(96, 242, 198, 0.61);
+	background: rgb(240, 224, 243);
 	box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.5);
 	position: relative;
 	bottom: 0px;
@@ -14,6 +15,7 @@
 	justify-content: space-evenly;
 	align-items: center;
 	border-radius: 30px;
+	font-size: large;
 }
 
 .Card:hover {
@@ -23,6 +25,7 @@
 }
 
 .Img {
+	margin-top: 7px;
 	width: 320px;
 	height: 160px;
 	border-radius: 15px;
@@ -32,6 +35,6 @@
 
 .TextCard {
 	text-align: center;
-	color: black;
+	color: rgb(75, 29, 108);
 	margin-bottom: 5px;
 }
