--- a/PI-Countries-main/client/src/Components/CardsConteiner/CardsConteiner.css
+++ b/PI-Countries-main/client/src/Components/CardsConteiner/CardsConteiner.css
@@ -3,6 +3,7 @@
 	gap: 1rem;
 	justify-content: center;
 	align-items: center;
+	border: 1px solid rgb(189, 162, 228);
 }
 
 .Cards {
@@ -25,6 +26,7 @@
 
 .Searchbar {
 	display: flex;
+	border-radius: 10px;
 }
 
 .filterBar {
