--- a/PI-Countries-main/client/src/Components/Details/Details.css
+++ b/PI-Countries-main/client/src/Components/Details/Details.css
@@ -1,7 +1,7 @@
 .CountryDetails {
 	margin-top: 40px;
-	height: 500px;
-	width: 900px;
+	height: 80vh;
+	width: 70%;
 	display: flex;
 	flex-direction: row;
 	align-content: center;
@@ -14,7 +14,28 @@
 	margin-left: 15%;
 }
 
+.CapAndcontinet {
+	margin-top: 10px;
+	font-size: 40px;
+}
 .cardImage {
-	width: 500px;
+	width: 550px;
 	border-radius: 10px;
+	border: 1px solid rgb(189, 162, 228);
+}
+
+.activities {
+	align-items: center;
+	flex-direction: column;
+}
+.capitalContainer {
+	font-size: large;
+}
+.ActivityList {
+	font-size: large;
+	align-items: center;
+	margin-top: 10px;
+	margin-top: 10px;
+	width: 220px;
+	height: 100px;
 }
