--- a/PI-Countries-main/client/src/Components/NavBar/NavBar.css
+++ b/PI-Countries-main/client/src/Components/NavBar/NavBar.css
@@ -1,7 +1,6 @@
 .NavBar {
 	padding: 20px;
-	background: rgb(134, 179, 91);
-	box-shadow: 0 5px 6px 0px rgb(161, 192, 78);
+	background: #a471c3;
 	margin-bottom: 3px;
 	display: flex;
 	justify-content: space-evenly;
@@ -11,7 +10,7 @@
 	position: relative;
 	font-size: 23px;
 	font-weight: 500;
-	color: rgb(225, 212, 212);
+	color: white;
 }
 
 .link::after {
@@ -23,7 +22,7 @@
 	width: 100%;
 	transform: scaleX(0);
 	height: 2px;
-	background: rgb(65, 153, 51);
+	background: var(--tinto);
 	border-radius: 5px;
 	transition: transform 250ms ease;
 	transform-origin: right;
