--- a/PI-Countries-main/client/src/Components/Pagination/Pagination.css
+++ b/PI-Countries-main/client/src/Components/Pagination/Pagination.css
@@ -1,11 +1,11 @@
-li {
+.li {
 	text-align: center;
 	width: 30px;
 	height: 25px;
-	border: 1px solid rgb(204, 122, 122);
+	border: 1px solid rgb(79, 35, 140);
 	border-radius: 10px;
 	position: relative;
-	transition: transform 50000ms ease;
+	transition: transform 500ms ease;
 }
 
 .Pages {
@@ -18,11 +18,13 @@ li {
 
 .li:hover {
 	transform: scale(1);
-	background-color: rgb(48, 209, 20);
+	background-color: rgb(240, 224, 243);
 	box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
 	bottom: 2px;
 }
 
 .activePage {
-	background: red;
+	background: var(--purple);
+	font-size: large;
+	-webkit-text-fill-color: beige;
 }
